# WASM-BENCH_TEST

./: .gitignore  Cargo.toml  README.md
.github/workflows/: bench.yml
bench/: Cargo.toml
bench/src/: main.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
wat/: extract.wat
