[workspace]
members  = ["bench", "plugin"]
resolver = "2"

[workspace.package]
edition = "2024"

# All profiles live here at workspace root (plugin's profile is ignored otherwise)
[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

# Used when building the wasm32 plugin: smaller binary
[profile.wasm]
inherits      = "release"
opt-level     = "z"
panic         = "abort"
