[package]
name    = "bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bench"
path = "src/main.rs"

[features]
default = [
    "runtime-wasmi",
    "runtime-tinywasm",
    "runtime-stitch",
    "runtime-wasm3",
    "runtime-wasmtime",
    "runtime-silverfir",
    "runtime-cabi",
]

runtime-wasmi     = ["dep:wasmi"]
runtime-tinywasm  = ["dep:tinywasm", "dep:tinywasm-parser"]
runtime-stitch    = ["dep:makepad-stitch", "dep:wast"]
runtime-wasm3     = ["dep:wasm3"]
runtime-wasmtime  = ["dep:wasmtime"]
runtime-silverfir = []
runtime-cabi      = ["dep:libloading"]

[dependencies]
wasmi = { version = "1.1.0", optional = true }

tinywasm        = { version = "0.9.1", optional = true }
tinywasm-parser = { version = "0.9.1", optional = true }

makepad-stitch = { git = "https://github.com/makepad/stitch", optional = true }
wast           = { version = "200", optional = true }

wasm3    = { version = "0.3.1",  optional = true }
wasmtime = { version = "46.0.1", optional = true }

sf-nano-core = { git = "https://github.com/mbbill/Silverfir-nano", optional = true }

libloading = { version = "0.8", optional = true }

serde_json = "1"
