[package]
name    = "bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bench"
path = "src/main.rs"

[features]
default = [
    "runtime-wasmi",
    "runtime-tinywasm",
    "runtime-stitch",
    "runtime-wasm3",
    "runtime-wasmtime",
    "runtime-silverfir",
    "runtime-cabi",
]

runtime-wasmi     = ["dep:wasmi"]
runtime-tinywasm  = ["dep:tinywasm"]
runtime-stitch    = ["dep:makepad-stitch", "dep:wast"]
runtime-wasm3     = ["dep:wasm3"]
runtime-wasmtime  = ["dep:wasmtime"]
runtime-silverfir = []
runtime-cabi      = ["dep:libloading"]

[dependencies]
# wasmi has a built-in `wat` feature — no separate wat crate needed for it
wasmi = { version = "1.1.0", features = ["wat"], optional = true }

# tinywasm bundles its own parser; we use the `wat` crate to convert WAT->bytes
tinywasm = { version = "0.9.1", optional = true }

makepad-stitch = { git = "https://github.com/makepad/stitch", optional = true }
wast           = { version = "200", optional = true }

wasm3    = { version = "0.3.1",  optional = true }
wasmtime = { version = "46.0.1", optional = true }

sf-nano-core = { git = "https://github.com/mbbill/Silverfir-nano", optional = true }

libloading = { version = "0.8", optional = true }

# Shared WAT->wasm converter used by tinywasm and wasm3 (wasmi & wasmtime parse WAT natively)
wat        = "1"
serde_json = "1"
