[package]
name    = "plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
flatbuffers = "24"
serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
opt-level     = "z"   # size matters for wasm distribution
lto           = true
codegen-units = 1
panic         = "abort"
