[package]
name    = "plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
flatbuffers = "24"
serde       = { version = "1", default-features = false, features = ["derive"] }
serde_json  = { version = "1", default-features = false, features = ["alloc"] }

# Only needed on wasm32-unknown-unknown (no std allocator there)
[target.'cfg(target_arch = "wasm32")'.dependencies]
dlmalloc = { version = "0.2", features = ["global"] }
# profiles must be defined at workspace root, not here
